corrected hover color

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ a:hover {
 
 .hike:hover, .hike2:hover {
     cursor: pointer;
-    background-color: #D2D2D2;
+    background-color: #E9E9E9;
 }
 
 .viewHikes {
